# jarvis

./: .gitignore  CLAUDE.md  JARVIS.md  JARVIS.md.save  PARITY.md  README.md  ROADMAP.md  TODO.md  pyproject.toml  tic-tac-toe.html
.github/workflows/: ci.yml
jarvis/: agent.py  checkpoints.py  cli.py  client.py  commands.py  config.py  context.py  doctor.py  formatter.py  images.py  logger.py  mcp_config.py  mcp_manager.py  notify.py  permissions.py  plugins.py  sessions.py  settings.py  skills.py  status.py  tasks.py  todos.py
jarvis/tests/: test_agent_helpers.py  test_checkpoints.py  test_cli.py  test_commands.py  test_context.py  test_doctor.py  test_images.py  test_logger.py  test_mcp_config.py  test_mcp_manager.py  test_mcp_reconnect.py  test_notify.py  test_permissions.py  test_plugins.py  test_read_file.py  test_run_command.py  test_sessions.py  test_settings.py  test_skills.py  test_spawn_agent.py  test_status.py  test_task_output.py  test_tasks.py  test_todo_write.py  test_todos.py  test_tools.py  test_vision_agent.py
jarvis/tools/: __init__.py  base.py  documents.py  edit_file.py  fetch_url.py  find_symbol.py  git_tools.py  glob_files.py  list_dir.py  package_info.py  read_file.py  run_command.py  search_files.py  sensitive.py  skill.py  spawn_agent.py  task_output.py  todo_write.py  web_extract.py  web_search.py  write_file.py
scripts/: SETUP-VM.md  improve-jarvis.sh
