[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "mcp>=1.0",
    "trafilatura>=1.6",
    "ddgs>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
jarvis = "jarvis.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis*"]
